<resources>
    <string name="app_name">Fitness Tracker</string>

    <string name="bottom_navigation_calendar">Calendar</string>
    <string name="bottom_navigation_exercises">Exercises</string>
    <string name="bottom_navigation_statistics">Statistics</string>
    <string name="bottom_navigation_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>

    <string name="required_value_validation_error">Required value</string>

    <string name="save">Save</string>
    <string name="delete_positive_button">Delete</string>
    <string name="delete_negative_button">Cancel</string>

    <string name="add_activity">Add activity</string>
    <string name="delete_activity_title">Delete activity</string>
    <string name="delete_activity_message">Do you want to delete this activity?</string>

    <string name="add_set">Add set</string>
    <string name="edit_set">Edit set</string>
    <string name="delete_set_title">Delete set</string>
    <string name="delete_set_message">Do you want to delete this set?</string>
    <string name="set_weight">Weight</string>
    <string name="set_reps">Reps</string>
    <string name="set_weight_unit">kg</string>
    <string name="set_reps_unit">reps</string>

    <string name="add_exercise">Add exercise</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="select_exercise">Select exercise</string>
    <string name="add_exercise_name_input_hint">Exercise name</string>
    <string name="delete_exercise_title">Delete exercise</string>
    <string name="delete_exercise_message">Do you want to delete this exercise? Every related activity will be lost.</string>

    <string name="statistics">Statistics</string>
    <string name="daily">Day</string>
    <string name="dayOfWeek">Day of week</string>
    <string name="monthly">Month</string>
    <string name="graph_statistics_maximums">Maximums</string>

    <string name="settings_notification">Notifications</string>
    <string name="settings_notification_weekly">Weekly notifications</string>
    <string name="settings_notification_weekly_summary">Receive weekly notifications to keep you on track</string>
    <string name="settings_notification_day">Notification day</string>
    <string name="settings_notification_hour">Notification hour</string>

    <string name="notification_improvement_title">Well done!</string>
    <string name="notification_improvement_message">Your most improved exercise is %1$s Tap to view detailed statistics.</string>
    <string name="notification_improvement_action">See statistics</string>
    <string name="notification_progress_title">Good job!</string>
    <string name="notification_progress_message">You\'ve worked out %1$d times in the last week! Keep it up!</string>
    <string name="notification_progress_action">Start activity</string>
    <string name="notification_no_progress_title">Go to the gym!</string>
    <string name="notification_no_progress_message">You haven\'t worked out in the last week. Get back on track!</string>
    <string name="notification_no_progress_action">Start activity</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="settings_theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">According to the system settings</string>
    <string name="no_activities">No activities</string>
</resources>